@@ -32,7 +32,6 @@ import org.apache.solr.response.SolrQueryResponse;
 import org.apache.solr.security.BasicAuthPlugin;
 import org.apache.solr.security.RuleBasedAuthorizationPlugin;
 
-import static org.apache.solr.common.util.Utils.makeMap;
 import static org.apache.solr.handler.admin.SecurityConfHandler.SecurityConfig;
 
 public class SecurityConfHandlerTest extends SolrTestCaseJ4 {
@@ -191,12 +190,14 @@ public class SecurityConfHandlerTest extends SolrTestCaseJ4 {
       super(null);
       m = new HashMap<>();
       SecurityConfig sp = new SecurityConfig();
-      sp.setData(makeMap("authentication", makeMap("class", "solr."+ BasicAuthPlugin.class.getSimpleName())));
+      Map<String, Object> securityData = new HashMap<>();
+      securityData.put("authentication", Map.of("class", "solr."+ BasicAuthPlugin.class.getSimpleName()));
+      securityData.put("authorization", Map.of("class", "solr."+RuleBasedAuthorizationPlugin.class.getSimpleName()));
       sp.setVersion(1);
-      sp.getData().put("authorization", makeMap("class", "solr."+RuleBasedAuthorizationPlugin.class.getSimpleName()));
+      sp.setData(securityData);
       m.put("/security.json", sp);
 
-      basicAuthPlugin.init(Collections.singletonMap("credentials", Collections.singletonMap("ignore", "me")));
+      basicAuthPlugin.init(Map.of("credentials", Map.of("ignore", "me")));
 
       rulesBasedAuthorizationPlugin.init(new HashMap<>());
     }
